# enki

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  LICENSE  README.md  ROADMAP.md  com.personalassistant.plist  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  soul.md
.claude/: settings.json
.github/workflows/: ci.yml
data/: last_seen
docs/: architecture-boundaries.md  codebase-audit-2026-03-11.md
memory/: .last_cleanup
scripts/: cc_guard.py  global_claude_instructions.md  install_launchagent.sh  test_sandbox.sh  uninstall_launchagent.sh
src/: agent.py  backup.py  config.py  constants.py  costs.py  jobs.py  models.py  notification.py  output_delivery.py  scheduler.py  sub_agent.py
src/audit/: __init__.py  db.py  events.py  integrity.py  query.py  verifier.py
src/guardrails/: __init__.py  allowlist.py  audit_hook.py  code_scanner.py  confirmation_gate.py  cost_guard.py  loop_detector.py  rate_limiter.py  scope_check.py
src/interfaces/: agent_protocol.py  cli.py  notifier.py  telegram_bot.py
src/memory/: __init__.py  compactor.py  store.py
src/monitoring/: system_monitor.py
src/pipeline/: browser_check.py  gates.py  stage_config.py  store.py
src/schedule/: store.py
src/teams/: store.py  templates.py
src/tools/: __init__.py  calendar_read.py  claude_code.py  email_read.py  evolve.py  follow_ups.py  github_tools.py  health_check.py  inspect_pipeline.py  job_status.py  loader.py  manage_pipeline.py  manage_schedule.py  manage_team.py  manage_workspace.py  notes.py  pipeline_ccc.py  pipeline_status.py  remember.py  remove_tool.py  restart.py  run_pipeline.py  save_pipeline_artifact.py  send_message.py  spawn_agent.py  spawn_team.py  tasks.py  team_report.py  web_search.py
src/workspaces/: store.py
tests/: conftest.py
tests/integration/: test_agent_turn.py  test_startup_smoke.py
tests/security/: test_code_scanner_bypasses.py  test_prompt_injection.py  test_scope_check_bypasses.py
tests/unit/: test_audit_verifier.py  test_backup.py  test_boundary_fixes.py  test_calendar_read.py  test_config.py  test_configurable_timeouts.py  test_cost_alerts.py  test_costs.py  test_critical_fixes.py  test_downtime_awareness.py  test_health_check.py  test_jobs.py  test_notes.py  test_notification.py  test_output_delivery.py  test_remember_tool.py  test_scheduler.py  test_scheduler_errors.py  test_scheduler_timezone.py  test_session_compaction.py  test_sub_agent.py  test_system_monitor.py  test_telegram_commands.py  test_web_search.py
tests/unit/agent/: test_agent_core.py  test_audit_integration.py  test_context_reinforcement.py  test_context_window.py  test_conversation_safety.py  test_model_routing.py  test_streaming.py  test_structlog_binding.py  test_tool_dispatch.py
tests/unit/audit/: test_chain_integrity.py  test_db.py  test_integrity.py  test_tier2_purge.py
tests/unit/concurrency/: test_cancelled_error.py  test_compactor_async_io.py  test_exception_swallowing.py  test_proc_wait.py  test_spawn_agent_semaphore.py  test_store_locks.py
tests/unit/guardrails/: test_allowlist.py  test_audit_hook.py  test_chain.py  test_code_scanner.py  test_confirmation_gate.py  test_cost_guard.py  test_loop_detector.py  test_rate_limiter.py  (+1 more)
tools_disabled/: shell_exec.py
(+50 files in other folders)
