[project]
name = "enki"
version = "0.1.0"
description = "A self-evolving AI personal assistant and software engineering orchestrator"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["ai", "assistant", "claude", "anthropic", "automation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0,<2.0",
    "python-telegram-bot>=21.0,<22.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.0,<26.0",
    "aiohttp>=3.9,<4.0",
    "apscheduler>=3.10,<4.0",
    "croniter>=2.0,<4.0",
    "click>=8.1,<9.0",
    "google-api-python-client>=2.100,<3.0",
    "google-auth-oauthlib>=1.0,<2.0",
    "openai-whisper>=20231117",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "freezegun>=1.4",
    "mypy>=1.9",
    "ruff>=0.15.5,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 130
target-version = "py312"
exclude = [".claude/worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM105"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
